--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/Krrrk/RGB_Game#readme",
   "dependencies": {
     "pixi.js": "^7.2.3"
+  },
+  "devDependencies": {
+    "@types/pixi.js": "^5.0.0"
   }
 }
