--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run-dev": "http-server"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "pixi.js": "^7.2.3"
   },
   "devDependencies": {
-    "@types/pixi.js": "^5.0.0"
+    "@types/pixi.js": "^5.0.0",
+    "http-server": "^14.1.1"
   }
 }
